# python-project-lvl1

./: pyproject.toml
brain_games/scripts/: brain_games.py
sazn86.egg-info/: PKG-INFO  SOURCES.txt
