[tool.poetry]
name = "Sazn86"
version = "0.1.0"
description = ""
authors = ["Alexz86 <sazn@mail.ru>"]
packages = [{ include = "brain_games" },]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

